@@ -399,7 +399,8 @@ Language support options (use -fno-<opt> to turn off -f<opt>) :
   -fbitfields    Emulate bit fields in structs [off]
   -flongdouble   Treat 'long double' as 'double' [off]
   -fstruct-return  Emulate returning structs and unions by value [off]
-  -fvararg-calls Emulate calls to variable-argument functions [on]
+  -fvararg-calls Support calls to variable-argument functions [on]
+  -funprototyped Support calls to old-style functions without prototypes [on]
   -fpacked-structs  Emulate packed structs [off]
   -finline-asm   Support inline 'asm' statements [off]
   -fall          Activate all language support options above
@@ -448,8 +449,8 @@ Interpreter mode:
 
 let language_support_options = [
   option_fbitfields; option_flongdouble;
-  option_fstruct_return; option_fvararg_calls; option_fpacked_structs;
-  option_finline_asm
+  option_fstruct_return; option_fvararg_calls; option_funprototyped;
+  option_fpacked_structs; option_finline_asm
 ]
 
 let num_source_files = ref 0
@@ -526,6 +527,7 @@ let cmdline_actions =
   @ f_opt "struct-return" option_fstruct_return
   @ f_opt "bitfields" option_fbitfields
   @ f_opt "vararg-calls" option_fvararg_calls
+  @ f_opt "unprototyped" option_funprototyped
   @ f_opt "packed-structs" option_fpacked_structs
   @ f_opt "inline-asm" option_finline_asm
   @ f_opt "fpu" option_ffpu
