@@ -14,7 +14,9 @@
   the last case.
 - Revised parsing of command-line options, more GCC-like.
 - Simpler and more robust handling of calls to variadic functions.
-
+- More tolerance for functions declared without a prototype
+  (option -funprototyped, on by default).
+	
 Release 2.1, 2013-10-28
 =======================
 
